2005-07-10  KUBO Takehiro  <kubo@jiubao.org>
	* Makefile, ext/oci8/extconf.rb: change version to 0.2.0-alpha.
	* ext/oci8/extconf.rb: add "ocidatetime.o" to $objs. add '--with-instant-client'
	  to Makefile when setup.rb is called with '--with-instant-client'.
	* ext/oci8/oci8.c: add oci8_base_class. fix bug in oci8_handle_initialize().
	  call Init_oci_datetime() in Init_oci8().
	* ext/oci8/oci8.h: add macros oci_lc, CHECK_STRING, TO_STRING_PTR and TO_STRING_LEN.
	* ext/oci8/ocinumber.c: add oci8_get_ocinumber().
	* ext/oci8/ocidatetime.c: add a new file for OCIDateTime.

2005-07-09  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c, ext/oci8/lob.c, ext/oci8/oci8.h, ext/oci8/oradate.c,
	   ext/oci8/oranumber.c, ext/oci8/rowid.c, ext/oci8/stmt.c:
	   use doubly linked list to free OCI8::BindType::*.
	* ext/oci8/extconf.rb, ext/oci8/oci8.c, ext/oci8/ocinumber.c: add OCINumber.

2005-07-03  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/*.c, ext/oci8/*.h: remove oci8_handle_t and oci8_base_class_t.
	  use oci8_base_t and oci8_bind_t instead of them. use oci8_base_class_t
	  and oci8_bind_class_t.
	* ext/oci8/descriptor.c, ext/oci8/handle.c: removed.
	* ext/oci8/rowid.c: added.

2005-07-01  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: try default $libs then get from demo_rdbms.mk.

2005-06-29  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: don't read sysliblist when instant client.

2005-06-12  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/const.c: delete unused constants.
	   move some oci_id_* to ext/oci8/error.c.
	   move oci8_sym_*stmt to ext/oci8/stmt.c.
	* ext/oci8/error.c: 
	   move some oci_id_* from ext/oci8/const.c.
	   move subclasses of cOCIException from ext/oci8/oci8.c.
	* ext/oci8/extconf.rb: add have_func("localtime_r").
	* ext/oci8/handle.c: delete explicit OCIParam.
	* ext/oci8/lob.c: delete #ifdef OCI8_USE_CALLBACK_LOB_READ.
	* ext/oci8/oci8.c: 
	   move subclasses of cOCIException to ext/oci8/error.c.